--- a/views/src/components/ProductCard/ProductCard.css
+++ b/views/src/components/ProductCard/ProductCard.css
@@ -1,26 +1,34 @@
 #prod_img {
-    height: 450px;
-    width: 450px;
-    border: 2px solid turquoise; 
+  height: 450px;
+  width: 450px;
+  border: 2px solid turquoise;
+  border-radius:30px; 
+}
+
+@media only screen and (max-width: 610px) {
+  #prod_img {
+    height: 230px;
+    width: 230px;
   }
+}
     
-  .product-card-info-container {
-    display: flex;
-    flex-direction: column;
-    margin:80px;
-    justify-content: center;
-    align-items: center;
-    border: 2px solid turquoise;
-    background-color: black;
-    border-radius:30px;
-  }
+.product-card-info-container {
+  display: flex;
+  flex-direction: column;
+  margin:80px;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid turquoise;
+  background-color: black;
+  border-radius:30px;
+}
   
-  .product-card-info {
-    text-align: center;
-    color: turquoise
-  }
+.product-card-info {
+  text-align: center;
+  color: turquoise
+}
   
-  #view {
-    color: black;
-    background-color: turquoise;
-  }
+#view {
+  color: black;
+  background-color: turquoise;
+}
