--- a/views/src/routes/Account/Account.css
+++ b/views/src/routes/Account/Account.css
@@ -11,6 +11,12 @@
     border-radius:20px;
 }
 
+@media only screen and (max-width: 450px) {
+    .infoBox {
+      font-size: 25px;
+    }
+}
+
 .accountBar {
     display: flex;
     justify-content:space-between;
@@ -22,6 +28,13 @@
     border-radius:20px;
 }
 
+@media only screen and (max-width: 645px) {
+    .accountBar {
+      flex-direction: column;
+      font-size:25px;
+    }
+}
+
 .address {
     display:flex;
     justify-content: center;
@@ -31,6 +44,7 @@
     border-radius:20px;
     margin:10px;
 }
+
 .addressInfo {
     display:flex;
     justify-content: center;
@@ -42,6 +56,16 @@
     margin:10px;
     font-size:30px;
 }
+
+@media only screen and (max-width: 450px) {
+    .addressInfo {
+      font-size: 25px;
+    }
+    .address {
+        font-size:25px;
+    }
+}
+
 .deliveryInfo {
     color:turquoise;
 }
